--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=security
+spring.datasource.url=jdbc:mysql://localhost:3306/securityproject
+spring.datasource.username=root
+spring.datasource.password=M@ngesh687
+spring.jpa.hibernate.ddl-auto=update
+springdoc.swagger-ui.path=/doc
